--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <main>
       <div id="app"></div>
       <form autocomplete="off" onsubmit="createOutput(); return false">
-        <input type="text"  id="input" placeholder="Type here (A'∩B)" />
+        <input type="text" autocapitalize="off" type="password" autocomplete="off"  id="input" placeholder="Type here (A'∩B)" />
       </form>
       <div class="btm">
         <div id="error"></div>
